[package]
name = "foundation_deployment"
version = "0.0.1"
description = "Foundation deployment providers for multi-cloud deployments"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["ewe-platform", "deployment", "cloud", "infrastructure"]

[dependencies]
# -- workspace dependencies
foundation_core = { workspace = true, features = ["ssl", "multi"] }
foundation_db = { path = "../foundation_db" }
foundation_macros = { path = "../foundation_macros" }
serde = { workspace = true }
serde_json = { workspace = true }
derive_more = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

# -- http client - use foundation_core's SimpleHttpClient

# -- config parsing
toml = "0.8"
serde_yaml = "0.9"

# -- hashing for config change detection
sha2 = "0.10"
base85rs = "0.1"

# -- file system utilities (for spec fetcher)
walkdir = "2.5"


[features]
default = []

# =============================================================================
# Provider-Level Feature Flags
# =============================================================================
# Enable entire provider modules. Users can enable just the providers they need.
gcp = []
cloudflare = []
mongodb = []
neon = []
supabase = []
planetscale = []
fly_io = []
stripe = []
aws = []
standard = []
prisma_postgres = []

# =============================================================================
# GCP API-Level Feature Flags
# =============================================================================
# Fine-grained control over which GCP APIs to include.
# Format: gcp_{api_name}
gcp_abusiveexperiencereport = []
gcp_acceleratedmobilepageurl = []
gcp_accessapproval = []
gcp_accesscontextmanager = []
gcp_addressvalidation = []
gcp_adexchangebuyer2 = []
gcp_adexperiencereport = []
gcp_admin = []
gcp_admob = []
gcp_adsense = []
gcp_adsenseplatform = []
gcp_advisorynotifications = []
gcp_agentregistry = []
gcp_aiplatform = []
gcp_airquality = []
gcp_alertcenter = []
gcp_alloydb = []
gcp_analytics = []
gcp_analyticsadmin = []
gcp_analyticsdata = []
gcp_analyticshub = []
gcp_androiddeviceprovisioning = []
gcp_androidenterprise = []
gcp_androidmanagement = []
gcp_androidpublisher = []
gcp_apigateway = []
gcp_apigee = []
gcp_apigeeregistry = []
gcp_apihub = []
gcp_apikeys = []
gcp_apim = []
gcp_appengine = []
gcp_apphub = []
gcp_appsmarket = []
gcp_areainsights = []
gcp_artifactregistry = []
gcp_assuredworkloads = []
gcp_authorizedbuyersmarketplace = []
gcp_backupdr = []
gcp_baremetalsolution = []
gcp_batch = []
gcp_beyondcorp = []
gcp_biglake = []
gcp_bigquery = []
gcp_bigqueryconnection = []
gcp_bigquerydatapolicy = []
gcp_bigquerydatatransfer = []
gcp_bigqueryreservation = []
gcp_bigtableadmin = []
gcp_billingbudgets = []
gcp_binaryauthorization = []
gcp_blockchainnodeengine = []
gcp_blogger = []
gcp_books = []
gcp_businessprofileperformance = []
gcp_calendar = []
gcp_certificatemanager = []
gcp_ces = []
gcp_chat = []
gcp_checks = []
gcp_chromemanagement = []
gcp_chromepolicy = []
gcp_chromeuxreport = []
gcp_chromewebstore = []
gcp_civicinfo = []
gcp_classroom = []
gcp_cloudasset = []
gcp_cloudbilling = []
gcp_cloudbuild = []
gcp_cloudchannel = []
gcp_cloudcommerceprocurement = []
gcp_cloudcontrolspartner = []
gcp_clouddeploy = []
gcp_clouderrorreporting = []
gcp_cloudfunctions = []
gcp_cloudidentity = []
gcp_cloudkms = []
gcp_cloudlocationfinder = []
gcp_cloudprofiler = []
gcp_cloudresourcemanager = []
gcp_cloudscheduler = []
gcp_cloudsearch = []
gcp_cloudshell = []
gcp_cloudsupport = []
gcp_cloudtasks = []
gcp_cloudtrace = []
gcp_composer = []
gcp_compute = []
gcp_config = []
gcp_connectors = []
gcp_contactcenteraiplatform = []
gcp_contactcenterinsights = []
gcp_container = []
gcp_containeranalysis = []
gcp_content = []
gcp_contentwarehouse = []
gcp_css = []
gcp_customsearch = []
gcp_datacatalog = []
gcp_dataflow = []
gcp_dataform = []
gcp_datafusion = []
gcp_datalabeling = []
gcp_datalineage = []
gcp_datamanager = []
gcp_datamigration = []
gcp_datapipelines = []
gcp_dataplex = []
gcp_dataportability = []
gcp_dataproc = []
gcp_datastore = []
gcp_datastream = []
gcp_deploymentmanager = []
gcp_developerconnect = []
gcp_developerknowledge = []
gcp_dfareporting = []
gcp_dialogflow = []
gcp_digitalassetlinks = []
gcp_discovery = []
gcp_discoveryengine = []
gcp_displayvideo = []
gcp_dlp = []
gcp_dns = []
gcp_docs = []
gcp_documentai = []
gcp_domains = []
gcp_doubleclickbidmanager = []
gcp_doubleclicksearch = []
gcp_drive = []
gcp_driveactivity = []
gcp_drivelabels = []
gcp_essentialcontacts = []
gcp_eventarc = []
gcp_factchecktools = []
gcp_fcm = []
gcp_fcmdata = []
gcp_file = []
gcp_firebase = []
gcp_firebaseappcheck = []
gcp_firebaseappdistribution = []
gcp_firebaseapphosting = []
gcp_firebasedatabase = []
gcp_firebasedataconnect = []
gcp_firebasedynamiclinks = []
gcp_firebasehosting = []
gcp_firebaseml = []
gcp_firebaserules = []
gcp_firebasestorage = []
gcp_firestore = []
gcp_fitness = []
gcp_forms = []
gcp_games = []
gcp_games_configuration = []
gcp_games_management = []
gcp_gkebackup = []
gcp_gkehub = []
gcp_gkeonprem = []
gcp_gmail = []
gcp_gmailpostmastertools = []
gcp_groupsmigration = []
gcp_groupssettings = []
gcp_health = []
gcp_healthcare = []
gcp_homegraph = []
gcp_hypercomputecluster = []
gcp_iam = []
gcp_iamcredentials = []
gcp_iap = []
gcp_identitytoolkit = []
gcp_ids = []
gcp_indexing = []
gcp_integrations = []
gcp_jobs = []
gcp_keep = []
gcp_kgsearch = []
gcp_kmsinventory = []
gcp_language = []
gcp_libraryagent = []
gcp_licensing = []
gcp_localservices = []
gcp_logging = []
gcp_looker = []
gcp_managedidentities = []
gcp_managedkafka = []
gcp_manufacturers = []
gcp_marketingplatformadmin = []
gcp_meet = []
gcp_memcache = []
gcp_merchantapi = []
gcp_metastore = []
gcp_migrationcenter = []
gcp_ml = []
gcp_monitoring = []
gcp_mybusinessaccountmanagement = []
gcp_mybusinessbusinessinformation = []
gcp_mybusinesslodging = []
gcp_mybusinessnotifications = []
gcp_mybusinessplaceactions = []
gcp_mybusinessqanda = []
gcp_mybusinessverifications = []
gcp_netapp = []
gcp_networkconnectivity = []
gcp_networkmanagement = []
gcp_networksecurity = []
gcp_networkservices = []
gcp_notebooks = []
gcp_oauth2 = []
gcp_observability = []
gcp_ondemandscanning = []
gcp_oracledatabase = []
gcp_orgpolicy = []
gcp_osconfig = []
gcp_oslogin = []
gcp_pagespeedonline = []
gcp_parallelstore = []
gcp_parametermanager = []
gcp_paymentsresellersubscription = []
gcp_people = []
gcp_places = []
gcp_playcustomapp = []
gcp_playdeveloperreporting = []
gcp_playgrouping = []
gcp_playintegrity = []
gcp_policyanalyzer = []
gcp_policysimulator = []
gcp_policytroubleshooter = []
gcp_pollen = []
gcp_privateca = []
gcp_prod_tt_sasportal = []
gcp_publicca = []
gcp_pubsub = []
gcp_pubsublite = []
gcp_rapidmigrationassessment = []
gcp_readerrevenuesubscriptionlinking = []
gcp_realtimebidding = []
gcp_recaptchaenterprise = []
gcp_recommendationengine = []
gcp_recommender = []
gcp_redis = []
gcp_reseller = []
gcp_retail = []
gcp_run = []
gcp_runtimeconfig = []
gcp_saasservicemgmt = []
gcp_safebrowsing = []
gcp_sasportal = []
gcp_script = []
gcp_searchads360 = []
gcp_searchconsole = []
gcp_secretmanager = []
gcp_securesourcemanager = []
gcp_securitycenter = []
gcp_securityposture = []
gcp_serviceconsumermanagement = []
gcp_servicecontrol = []
gcp_servicedirectory = []
gcp_servicemanagement = []
gcp_servicenetworking = []
gcp_serviceusage = []
gcp_sheets = []
gcp_site_verification = []
gcp_slides = []
gcp_smartdevicemanagement = []
gcp_solar = []
gcp_spanner = []
gcp_speech = []
gcp_sqladmin = []
gcp_storage = []
gcp_storagebatchoperations = []
gcp_storagetransfer = []
gcp_streetviewpublish = []
gcp_sts = []
gcp_tagmanager = []
gcp_tasks = []
gcp_testing = []
gcp_texttospeech = []
gcp_threatintelligence = []
gcp_toolresults = []
gcp_tpu = []
gcp_trafficdirector = []
gcp_transcoder = []
gcp_translate = []
gcp_travelimpactmodel = []
gcp_vault = []
gcp_verifiedaccess = []
gcp_versionhistory = []
gcp_videointelligence = []
gcp_vision = []
gcp_vmmigration = []
gcp_vmwareengine = []
gcp_vpcaccess = []
gcp_walletobjects = []
gcp_webfonts = []
gcp_webrisk = []
gcp_websecurityscanner = []
gcp_workflowexecutions = []
gcp_workflows = []
gcp_workloadmanager = []
gcp_workspaceevents = []
gcp_workstations = []
gcp_youtube = []
gcp_youtube_analytics = []
gcp_youtubereporting = []

[lints]
workspace = true
