[dependencies]
base85rs = "0.1"
dirs = "5.0"
http = "1.4.0"
regex = "1.10"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
urlencoding = "2.1"
walkdir = "2.5"

[dependencies.chrono]
workspace = true

[dependencies.derive_more]
workspace = true

[dependencies.foundation_core]
features = [
    "ssl",
    "multi",
]
workspace = true

[dependencies.foundation_db]
path = "../foundation_db"

[dependencies.foundation_macros]
path = "../foundation_macros"

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.tracing]
workspace = true

[dev-dependencies]
tracing-subscriber = "0.3"
tracing-test = "0.2"

[features]
aws = []
cloudflare = [
    "cloudflare_access",
    "cloudflare_accounts",
    "cloudflare_ai",
    "cloudflare_analytics",
    "cloudflare_apps",
    "cloudflare_billing",
    "cloudflare_cache",
    "cloudflare_certificates",
    "cloudflare_data",
    "cloudflare_devices",
    "cloudflare_dns",
    "cloudflare_domains",
    "cloudflare_email",
    "cloudflare_entitlements",
    "cloudflare_events",
    "cloudflare_ips",
    "cloudflare_load_balancers",
    "cloudflare_logs",
    "cloudflare_magic_wan",
    "cloudflare_media",
    "cloudflare_migration",
    "cloudflare_network",
    "cloudflare_profile",
    "cloudflare_queues",
    "cloudflare_radar",
    "cloudflare_reports",
    "cloudflare_resources",
    "cloudflare_routes",
    "cloudflare_rules",
    "cloudflare_secrets",
    "cloudflare_security",
    "cloudflare_security_center",
    "cloudflare_shares",
    "cloudflare_storage",
    "cloudflare_stream",
    "cloudflare_targets",
    "cloudflare_tasks",
    "cloudflare_tenants",
    "cloudflare_tokens",
    "cloudflare_tracer",
    "cloudflare_waiting_rooms",
    "cloudflare_workers",
    "cloudflare_zones",
]
cloudflare_access = []
cloudflare_accounts = []
cloudflare_ai = []
cloudflare_analytics = []
cloudflare_apps = []
cloudflare_billing = []
cloudflare_cache = []
cloudflare_certificates = []
cloudflare_data = []
cloudflare_devices = []
cloudflare_dns = []
cloudflare_domains = []
cloudflare_email = []
cloudflare_entitlements = []
cloudflare_events = []
cloudflare_ips = []
cloudflare_load_balancers = []
cloudflare_logs = []
cloudflare_magic_wan = []
cloudflare_media = []
cloudflare_migration = []
cloudflare_network = []
cloudflare_profile = []
cloudflare_queues = []
cloudflare_radar = []
cloudflare_reports = []
cloudflare_resources = []
cloudflare_routes = []
cloudflare_rules = []
cloudflare_secrets = []
cloudflare_security = []
cloudflare_security_center = []
cloudflare_shares = []
cloudflare_storage = []
cloudflare_stream = []
cloudflare_targets = []
cloudflare_tasks = []
cloudflare_tenants = []
cloudflare_tokens = []
cloudflare_tracer = []
cloudflare_waiting_rooms = []
cloudflare_workers = []
cloudflare_zones = []
default = []
fly_io = [
    "fly_io_apps",
    "fly_io_current",
    "fly_io_kms",
    "fly_io_machines",
    "fly_io_oidc",
    "fly_io_placements",
    "fly_io_regions",
    "fly_io_volumes",
]
fly_io_apps = []
fly_io_current = []
fly_io_kms = []
fly_io_machines = []
fly_io_oidc = []
fly_io_placements = []
fly_io_regions = []
fly_io_volumes = []
gcp = []
gcp_abusiveexperiencereport = []
gcp_acceleratedmobilepageurl = []
gcp_accessapproval = []
gcp_accesscontextmanager = []
gcp_addressvalidation = []
gcp_adexchangebuyer2 = []
gcp_adexperiencereport = []
gcp_admin = []
gcp_admob = []
gcp_adsense = []
gcp_adsenseplatform = []
gcp_advisorynotifications = []
gcp_agentregistry = []
gcp_aiplatform = []
gcp_airquality = []
gcp_alertcenter = []
gcp_alloydb = []
gcp_analytics = []
gcp_analyticsadmin = []
gcp_analyticsdata = []
gcp_analyticshub = []
gcp_androiddeviceprovisioning = []
gcp_androidenterprise = []
gcp_androidmanagement = []
gcp_androidpublisher = []
gcp_apigateway = []
gcp_apigee = []
gcp_apigeeregistry = []
gcp_apihub = []
gcp_apikeys = []
gcp_apim = []
gcp_appengine = []
gcp_apphub = []
gcp_appsmarket = []
gcp_areainsights = []
gcp_artifactregistry = []
gcp_assuredworkloads = []
gcp_authorizedbuyersmarketplace = []
gcp_backupdr = []
gcp_baremetalsolution = []
gcp_batch = []
gcp_beyondcorp = []
gcp_biglake = []
gcp_bigquery = []
gcp_bigqueryconnection = []
gcp_bigquerydatapolicy = []
gcp_bigquerydatatransfer = []
gcp_bigqueryreservation = []
gcp_bigtableadmin = []
gcp_billingbudgets = []
gcp_binaryauthorization = []
gcp_blockchainnodeengine = []
gcp_blogger = []
gcp_books = []
gcp_businessprofileperformance = []
gcp_calendar = []
gcp_certificatemanager = []
gcp_ces = []
gcp_chat = []
gcp_checks = []
gcp_chromemanagement = []
gcp_chromepolicy = []
gcp_chromeuxreport = []
gcp_chromewebstore = []
gcp_civicinfo = []
gcp_classroom = []
gcp_cloudasset = []
gcp_cloudbilling = []
gcp_cloudbuild = []
gcp_cloudchannel = []
gcp_cloudcommerceprocurement = []
gcp_cloudcontrolspartner = []
gcp_clouddeploy = []
gcp_clouderrorreporting = []
gcp_cloudfunctions = []
gcp_cloudidentity = []
gcp_cloudkms = []
gcp_cloudlocationfinder = []
gcp_cloudprofiler = []
gcp_cloudresourcemanager = []
gcp_cloudscheduler = []
gcp_cloudsearch = []
gcp_cloudshell = []
gcp_cloudsupport = []
gcp_cloudtasks = []
gcp_cloudtrace = []
gcp_composer = []
gcp_compute = []
gcp_config = []
gcp_connectors = []
gcp_contactcenteraiplatform = []
gcp_contactcenterinsights = []
gcp_container = []
gcp_containeranalysis = []
gcp_content = []
gcp_contentwarehouse = []
gcp_css = []
gcp_customsearch = []
gcp_datacatalog = []
gcp_dataflow = []
gcp_dataform = []
gcp_datafusion = []
gcp_datalabeling = []
gcp_datalineage = []
gcp_datamanager = []
gcp_datamigration = []
gcp_datapipelines = []
gcp_dataplex = []
gcp_dataportability = []
gcp_dataproc = []
gcp_datastore = []
gcp_datastream = []
gcp_deploymentmanager = []
gcp_developerconnect = []
gcp_developerknowledge = []
gcp_dfareporting = []
gcp_dialogflow = []
gcp_digitalassetlinks = []
gcp_discovery = []
gcp_discoveryengine = []
gcp_displayvideo = []
gcp_dlp = []
gcp_dns = []
gcp_docs = []
gcp_documentai = []
gcp_domains = []
gcp_doubleclickbidmanager = []
gcp_doubleclicksearch = []
gcp_drive = []
gcp_driveactivity = []
gcp_drivelabels = []
gcp_essentialcontacts = []
gcp_eventarc = []
gcp_factchecktools = []
gcp_fcm = []
gcp_fcmdata = []
gcp_file = []
gcp_firebase = []
gcp_firebaseappcheck = []
gcp_firebaseappdistribution = []
gcp_firebaseapphosting = []
gcp_firebasedatabase = []
gcp_firebasedataconnect = []
gcp_firebasedynamiclinks = []
gcp_firebasehosting = []
gcp_firebaseml = []
gcp_firebaserules = []
gcp_firebasestorage = []
gcp_firestore = []
gcp_fitness = []
gcp_forms = []
gcp_games = []
gcp_games_configuration = []
gcp_games_management = []
gcp_gkebackup = []
gcp_gkehub = []
gcp_gkeonprem = []
gcp_gmail = []
gcp_gmailpostmastertools = []
gcp_groupsmigration = []
gcp_groupssettings = []
gcp_health = []
gcp_healthcare = []
gcp_homegraph = []
gcp_hypercomputecluster = []
gcp_iam = []
gcp_iamcredentials = []
gcp_iap = []
gcp_identitytoolkit = []
gcp_ids = []
gcp_indexing = []
gcp_integrations = []
gcp_jobs = []
gcp_keep = []
gcp_kgsearch = []
gcp_kmsinventory = []
gcp_language = []
gcp_libraryagent = []
gcp_licensing = []
gcp_localservices = []
gcp_logging = []
gcp_looker = []
gcp_managedidentities = []
gcp_managedkafka = []
gcp_manufacturers = []
gcp_marketingplatformadmin = []
gcp_meet = []
gcp_memcache = []
gcp_merchantapi = []
gcp_metastore = []
gcp_migrationcenter = []
gcp_ml = []
gcp_monitoring = []
gcp_mybusinessaccountmanagement = []
gcp_mybusinessbusinessinformation = []
gcp_mybusinesslodging = []
gcp_mybusinessnotifications = []
gcp_mybusinessplaceactions = []
gcp_mybusinessqanda = []
gcp_mybusinessverifications = []
gcp_netapp = []
gcp_networkconnectivity = []
gcp_networkmanagement = []
gcp_networksecurity = []
gcp_networkservices = []
gcp_notebooks = []
gcp_oauth2 = []
gcp_observability = []
gcp_ondemandscanning = []
gcp_oracledatabase = []
gcp_orgpolicy = []
gcp_osconfig = []
gcp_oslogin = []
gcp_pagespeedonline = []
gcp_parallelstore = []
gcp_parametermanager = []
gcp_paymentsresellersubscription = []
gcp_people = []
gcp_places = []
gcp_playcustomapp = []
gcp_playdeveloperreporting = []
gcp_playgrouping = []
gcp_playintegrity = []
gcp_policyanalyzer = []
gcp_policysimulator = []
gcp_policytroubleshooter = []
gcp_pollen = []
gcp_privateca = []
gcp_prod_tt_sasportal = []
gcp_publicca = []
gcp_pubsub = []
gcp_pubsublite = []
gcp_rapidmigrationassessment = []
gcp_readerrevenuesubscriptionlinking = []
gcp_realtimebidding = []
gcp_recaptchaenterprise = []
gcp_recommendationengine = []
gcp_recommender = []
gcp_redis = []
gcp_reseller = []
gcp_retail = []
gcp_run = []
gcp_runtimeconfig = []
gcp_saasservicemgmt = []
gcp_safebrowsing = []
gcp_sasportal = []
gcp_script = []
gcp_searchads360 = []
gcp_searchconsole = []
gcp_secretmanager = []
gcp_securesourcemanager = []
gcp_securitycenter = []
gcp_securityposture = []
gcp_serviceconsumermanagement = []
gcp_servicecontrol = []
gcp_servicedirectory = []
gcp_servicemanagement = []
gcp_servicenetworking = []
gcp_serviceusage = []
gcp_sheets = []
gcp_site_verification = []
gcp_slides = []
gcp_smartdevicemanagement = []
gcp_solar = []
gcp_spanner = []
gcp_speech = []
gcp_sqladmin = []
gcp_storage = []
gcp_storagebatchoperations = []
gcp_storagetransfer = []
gcp_streetviewpublish = []
gcp_sts = []
gcp_tagmanager = []
gcp_tasks = []
gcp_testing = []
gcp_texttospeech = []
gcp_threatintelligence = []
gcp_toolresults = []
gcp_tpu = []
gcp_trafficdirector = []
gcp_transcoder = []
gcp_translate = []
gcp_travelimpactmodel = []
gcp_vault = []
gcp_verifiedaccess = []
gcp_versionhistory = []
gcp_videointelligence = []
gcp_vision = []
gcp_vmmigration = []
gcp_vmwareengine = []
gcp_vpcaccess = []
gcp_walletobjects = []
gcp_webfonts = []
gcp_webrisk = []
gcp_websecurityscanner = []
gcp_workflowexecutions = []
gcp_workflows = []
gcp_workloadmanager = []
gcp_workspaceevents = []
gcp_workstations = []
gcp_youtube = []
gcp_youtube_analytics = []
gcp_youtubereporting = []
huggingface = []
mongodb = []
neon = [
    "neon_keys",
    "neon_auth",
    "neon_compute",
    "neon_invitations",
    "neon_me",
    "neon_members",
    "neon_organizations",
    "neon_projects",
    "neon_regions",
]
neon_auth = []
neon_compute = []
neon_invitations = []
neon_keys = []
neon_me = []
neon_members = []
neon_organizations = []
neon_projects = []
neon_regions = []
planetscale = [
    "planetscale_apply_deploy",
    "planetscale_audit_log",
    "planetscale_auto_apply",
    "planetscale_auto_delete_branch",
    "planetscale_backup_policies",
    "planetscale_backups",
    "planetscale_bouncer_resizes",
    "planetscale_bouncers",
    "planetscale_branches",
    "planetscale_budgets",
    "planetscale_cancel",
    "planetscale_changes",
    "planetscale_cidrs",
    "planetscale_cluster",
    "planetscale_cluster_size_skus",
    "planetscale_complete",
    "planetscale_complete_deploy",
    "planetscale_cutover",
    "planetscale_databases",
    "planetscale_default",
    "planetscale_demote",
    "planetscale_deploy",
    "planetscale_deploy_queue",
    "planetscale_deploy_requests",
    "planetscale_deployment",
    "planetscale_dismiss",
    "planetscale_download",
    "planetscale_extensions",
    "planetscale_invoices",
    "planetscale_keyspaces",
    "planetscale_line_items",
    "planetscale_lint",
    "planetscale_maintenance_schedules",
    "planetscale_members",
    "planetscale_oauth_applications",
    "planetscale_operations",
    "planetscale_organizations",
    "planetscale_parameters",
    "planetscale_passwords",
    "planetscale_promote",
    "planetscale_query_patterns",
    "planetscale_read_only_regions",
    "planetscale_reassign",
    "planetscale_regions",
    "planetscale_renew",
    "planetscale_reset",
    "planetscale_reset_default",
    "planetscale_resizes",
    "planetscale_retry",
    "planetscale_reverse_cutover",
    "planetscale_reverse_traffic",
    "planetscale_revert",
    "planetscale_reviews",
    "planetscale_roles",
    "planetscale_rollout_status",
    "planetscale_rules",
    "planetscale_safe_migrations",
    "planetscale_schema",
    "planetscale_schema_recommendations",
    "planetscale_service_tokens",
    "planetscale_skip_revert",
    "planetscale_storage_check",
    "planetscale_switch_primaries",
    "planetscale_switch_replicas",
    "planetscale_teams",
    "planetscale_test",
    "planetscale_throttler",
    "planetscale_token",
    "planetscale_tokens",
    "planetscale_user",
    "planetscale_verify_data",
    "planetscale_vschema",
    "planetscale_webhooks",
    "planetscale_windows",
    "planetscale_workflows",
]
planetscale_apply_deploy = []
planetscale_audit_log = []
planetscale_auto_apply = []
planetscale_auto_delete_branch = []
planetscale_backup_policies = []
planetscale_backups = []
planetscale_bouncer_resizes = []
planetscale_bouncers = []
planetscale_branches = []
planetscale_budgets = []
planetscale_cancel = []
planetscale_changes = []
planetscale_cidrs = []
planetscale_cluster = []
planetscale_cluster_size_skus = []
planetscale_complete = []
planetscale_complete_deploy = []
planetscale_cutover = []
planetscale_databases = []
planetscale_default = []
planetscale_demote = []
planetscale_deploy = []
planetscale_deploy_queue = []
planetscale_deploy_requests = []
planetscale_deployment = []
planetscale_dismiss = []
planetscale_download = []
planetscale_extensions = []
planetscale_invoices = []
planetscale_keyspaces = []
planetscale_line_items = []
planetscale_lint = []
planetscale_maintenance_schedules = []
planetscale_members = []
planetscale_oauth_applications = []
planetscale_operations = []
planetscale_organizations = []
planetscale_parameters = []
planetscale_passwords = []
planetscale_promote = []
planetscale_query_patterns = []
planetscale_read_only_regions = []
planetscale_reassign = []
planetscale_regions = []
planetscale_renew = []
planetscale_reset = []
planetscale_reset_default = []
planetscale_resizes = []
planetscale_retry = []
planetscale_reverse_cutover = []
planetscale_reverse_traffic = []
planetscale_revert = []
planetscale_reviews = []
planetscale_roles = []
planetscale_rollout_status = []
planetscale_rules = []
planetscale_safe_migrations = []
planetscale_schema = []
planetscale_schema_recommendations = []
planetscale_service_tokens = []
planetscale_skip_revert = []
planetscale_storage_check = []
planetscale_switch_primaries = []
planetscale_switch_replicas = []
planetscale_teams = []
planetscale_test = []
planetscale_throttler = []
planetscale_token = []
planetscale_tokens = []
planetscale_user = []
planetscale_verify_data = []
planetscale_vschema = []
planetscale_webhooks = []
planetscale_windows = []
planetscale_workflows = []
prisma_postgres = [
    "prisma_postgres_accelerate",
    "prisma_postgres_backups",
    "prisma_postgres_compute_services",
    "prisma_postgres_connections",
    "prisma_postgres_databases",
    "prisma_postgres_integrations",
    "prisma_postgres_postgres",
    "prisma_postgres_projects",
    "prisma_postgres_promote",
    "prisma_postgres_regions",
    "prisma_postgres_restore",
    "prisma_postgres_rotate",
    "prisma_postgres_start",
    "prisma_postgres_stop",
    "prisma_postgres_transfer",
    "prisma_postgres_usage",
    "prisma_postgres_versions",
    "prisma_postgres_workspaces",
]
prisma_postgres_accelerate = []
prisma_postgres_backups = []
prisma_postgres_compute_services = []
prisma_postgres_connections = []
prisma_postgres_databases = []
prisma_postgres_integrations = []
prisma_postgres_postgres = []
prisma_postgres_projects = []
prisma_postgres_promote = []
prisma_postgres_regions = []
prisma_postgres_restore = []
prisma_postgres_rotate = []
prisma_postgres_start = []
prisma_postgres_stop = []
prisma_postgres_transfer = []
prisma_postgres_usage = []
prisma_postgres_versions = []
prisma_postgres_workspaces = []
standard = []
stripe = [
    "stripe_accept",
    "stripe_activate",
    "stripe_active_entitlements",
    "stripe_advance",
    "stripe_alerts",
    "stripe_application_fees",
    "stripe_archive",
    "stripe_authorizations",
    "stripe_balance",
    "stripe_balance_settings",
    "stripe_balance_transactions",
    "stripe_calculations",
    "stripe_cancel",
    "stripe_checkout",
    "stripe_complete",
    "stripe_computed_upfront_line_items",
    "stripe_configurations",
    "stripe_confirm",
    "stripe_confirmation_tokens",
    "stripe_connect",
    "stripe_country_specs",
    "stripe_coupons",
    "stripe_create_from_calculation",
    "stripe_create_reversal",
    "stripe_credit_balance_summary",
    "stripe_credit_balance_transactions",
    "stripe_credit_grants",
    "stripe_credit_notes",
    "stripe_credit_reversals",
    "stripe_customers",
    "stripe_deactivate",
    "stripe_debit_reversals",
    "stripe_delete",
    "stripe_disputes",
    "stripe_domains",
    "stripe_ephemeral_keys",
    "stripe_events",
    "stripe_exchange_rates",
    "stripe_expire",
    "stripe_features",
    "stripe_file_links",
    "stripe_files",
    "stripe_finalize",
    "stripe_finalize_amount",
    "stripe_find",
    "stripe_history",
    "stripe_increment",
    "stripe_invoicing",
    "stripe_line_items",
    "stripe_lines",
    "stripe_mandates",
    "stripe_meters",
    "stripe_orders",
    "stripe_payment_methods",
    "stripe_payments",
    "stripe_pdf",
    "stripe_personalization_designs",
    "stripe_physical_bundles",
    "stripe_plans",
    "stripe_products",
    "stripe_promotion_codes",
    "stripe_quotes",
    "stripe_radar",
    "stripe_reactivate",
    "stripe_received_credits",
    "stripe_received_debits",
    "stripe_registrations",
    "stripe_reject",
    "stripe_reporting",
    "stripe_requests",
    "stripe_reverse",
    "stripe_saved_queries",
    "stripe_scheduled_query_runs",
    "stripe_secrets",
    "stripe_settings",
    "stripe_settlements",
    "stripe_setup_attempts",
    "stripe_setup_intents",
    "stripe_shipping_rates",
    "stripe_subscriptions",
    "stripe_suppliers",
    "stripe_tax_codes",
    "stripe_tax_ids",
    "stripe_tax_rates",
    "stripe_terminal",
    "stripe_test_clocks",
    "stripe_tokens",
    "stripe_topups",
    "stripe_transaction_entries",
    "stripe_transactions",
    "stripe_verify_microdeposits",
    "stripe_void",
    "stripe_webhooks",
]
stripe_accept = []
stripe_activate = []
stripe_active_entitlements = []
stripe_advance = []
stripe_alerts = []
stripe_application_fees = []
stripe_archive = []
stripe_authorizations = []
stripe_balance = []
stripe_balance_settings = []
stripe_balance_transactions = []
stripe_calculations = []
stripe_cancel = []
stripe_checkout = []
stripe_complete = []
stripe_computed_upfront_line_items = []
stripe_configurations = []
stripe_confirm = []
stripe_confirmation_tokens = []
stripe_connect = []
stripe_country_specs = []
stripe_coupons = []
stripe_create_from_calculation = []
stripe_create_reversal = []
stripe_credit_balance_summary = []
stripe_credit_balance_transactions = []
stripe_credit_grants = []
stripe_credit_notes = []
stripe_credit_reversals = []
stripe_customers = []
stripe_deactivate = []
stripe_debit_reversals = []
stripe_delete = []
stripe_disputes = []
stripe_domains = []
stripe_ephemeral_keys = []
stripe_events = []
stripe_exchange_rates = []
stripe_expire = []
stripe_features = []
stripe_file_links = []
stripe_files = []
stripe_finalize = []
stripe_finalize_amount = []
stripe_find = []
stripe_history = []
stripe_increment = []
stripe_invoicing = []
stripe_line_items = []
stripe_lines = []
stripe_mandates = []
stripe_meters = []
stripe_orders = []
stripe_payment_methods = []
stripe_payments = []
stripe_pdf = []
stripe_personalization_designs = []
stripe_physical_bundles = []
stripe_plans = []
stripe_products = []
stripe_promotion_codes = []
stripe_quotes = []
stripe_radar = []
stripe_reactivate = []
stripe_received_credits = []
stripe_received_debits = []
stripe_registrations = []
stripe_reject = []
stripe_reporting = []
stripe_requests = []
stripe_reverse = []
stripe_saved_queries = []
stripe_scheduled_query_runs = []
stripe_secrets = []
stripe_settings = []
stripe_settlements = []
stripe_setup_attempts = []
stripe_setup_intents = []
stripe_shipping_rates = []
stripe_subscriptions = []
stripe_suppliers = []
stripe_tax_codes = []
stripe_tax_ids = []
stripe_tax_rates = []
stripe_terminal = []
stripe_test_clocks = []
stripe_tokens = []
stripe_topups = []
stripe_transaction_entries = []
stripe_transactions = []
stripe_verify_microdeposits = []
stripe_void = []
stripe_webhooks = []
supabase = [
    "supabase_auth",
    "supabase_backups",
    "supabase_branches",
    "supabase_database",
    "supabase_diff",
    "supabase_functions",
    "supabase_merge",
    "supabase_projects",
    "supabase_push",
    "supabase_realtime",
    "supabase_reset",
    "supabase_snippets",
    "supabase_storage",
]
supabase_auth = []
supabase_backups = []
supabase_branches = []
supabase_database = []
supabase_diff = []
supabase_functions = []
supabase_merge = []
supabase_projects = []
supabase_push = []
supabase_realtime = []
supabase_reset = []
supabase_snippets = []
supabase_storage = []

[lints]
workspace = true

[package]
description = "Foundation deployment providers for multi-cloud deployments"
keywords = [
    "ewe-platform",
    "deployment",
    "cloud",
    "infrastructure",
]
name = "foundation_deployment"
version = "0.0.1"

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.rust-version]
workspace = true

