[package]
name = "foundation_jsmacros"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Macros for the foundations_jsnostd crate providing suitable support to simplify usage"
keywords = ["jsmacros", "fouundations_js_macros"]

[lib]
proc-macro = true

[dependencies]
syn = ">=2.0"
quote = ">=1.0"
proc-macro2 = ">=1.0"
proc-macro-crate = "3.3.0"

[lints]
workspace = true
