[package]
name = "foundation_logging"
version = "0.0.1"
edition = "2021"

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter"] }
