[package]
name = "foundation_macros"
version = "0.0.1"
description = "Providing a foundation crate for different helper macros for use"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords = ["foundations_macros", "ewe-platform macros"]

[dependencies]

[lints]
workspace = true
