[package]
name = "foundation_testing"
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["Foundation AI Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/darkvoid/ewe_platform"
description = "Reusable stress testing infrastructure for Foundation synchronization primitives"
keywords = ["testing", "stress", "synchronization", "benchmarks", "condvar"]
categories = ["development-tools::testing"]

[dependencies]
# Foundation primitives being tested
foundation_nostd = { workspace = true, features = ["std"] }
foundation_core = { workspace = true }
foundation_deployment = { path = "../foundation_deployment" }
tracing = { workspace = true }
derive_more = { workspace = true }

# Criterion for benchmarking (only allowed external dependency for testing)
criterion = { version = "0.5", features = ["html_reports"] }

# WebSocket test server dependencies
base64 = "0.21"
sha1 = { version = "0.10", features = ["std"] }

# TLS test server dependencies
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "logging", "ring"] }
zeroize = "1"

[dev-dependencies]
serial_test = { workspace = true }
tracing-test = { version = "0.2.5",  features = ["no-env-filter"] }


[features]
default = ["std"]
std = ["foundation_nostd/std"]

# HuggingFace model downloading for AI backend testing
huggingface = ["foundation_deployment/huggingface"]
