[package]
name = "foundation_wasm"
version = "0.0.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Implements the nostd interface runtime for WASM and JS interoperability"
keywords = ["foundation wasm layer", "foundation_wasm"]
include = ["/src", "/runtime"]

[dependencies]
foundation_nostd = { workspace = true }
foundation_macros = { workspace = true }

[features]
f128 = []

[lints]
workspace = true
