[package]
name = "foundations_ext"
description = "Foundation extensions published from the ewe_platform but usable by all"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
derive_more = { version = "1.0.0", features = ["from", "debug", "error"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
serde_yml = { version = "0.0.12" }

async-trait = { version = "0.1.82"}
tokio = { version = "1.36", features= ["sync", "time"] }

[lints]
workspace = true
