[package]
name = "serde_ext"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
derive_more = { version = "1.0.0", features = ["from", "debug", "error"] }
serde = { version = "1", features = ["derive"]}
serde_json = { version = "1" }
serde_yml = { version = "0.0.12" }

[lints]
workspace = true
