[package]
name = "strings_ext"
version = "0.0.1"
description = "The string crate for serde"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
derive_more = { version = "1.0.0", features = ["from", "debug", "error"] }

[lints]
workspace = true
