[package]
name = "tokio_ext"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
async-trait = { version = "0.1.82"}
tokio = { version = "1.36" }

[lints]
workspace = true
