[package]
name = "channels"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
rust-version.workspace = true
keywords.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# global workspace dependencies
tokio.workspace = true
anyhow.workspace = true
crossbeam.workspace = true
async-channel.workspace = true
futures.workspace = true
thiserror.workspace = true

# local package dependencies
# dep = { verison ...}


[lints]
workspace = true
